# Bootmanager

./: .gitignore  CMakeLists.txt  build.cmd  configure.cmd
FirstAttempt/: configure.cmd  gcc.cmake
FirstAttempt/src/: fat32.S
SecondAttempt/: CMakeLists.txt  configure.cmd
SecondAttempt/boot/: CMakeLists.txt
SecondAttempt/boot/environ/: CMakeLists.txt
SecondAttempt/boot/freeldr/: CMakeLists.txt
SecondAttempt/boot/freeldr/bootsect/: CMakeLists.txt
SecondAttempt/boot/freeldr/freeldr/: CMakeLists.txt
SecondAttempt/dll/appcompat/apphelp/: CMakeLists.txt
SecondAttempt/sdk/cmake/: CMakeMacros.cmake  gcc.cmake  host-tools.cmake  msvc.cmake
SecondAttempt/sdk/include/reactos/: version.cmake
SecondAttempt/sdk/include/xdk/: CMakeLists.txt
SecondAttempt/sdk/lib/atl/: atlcore.h  atldef.h
SecondAttempt/sdk/lib/cpprt/: CMakeLists.txt
SecondAttempt/sdk/lib/crt/: crt.cmake
SecondAttempt/sdk/lib/crt/conio/: cputs.c
SecondAttempt/sdk/lib/crt/string/: scanf.h
SecondAttempt/sdk/lib/crt/wine/: cpp.c
SecondAttempt/sdk/lib/drivers/rdbsslib/: CMakeLists.txt
SecondAttempt/sdk/lib/drivers/rxce/: rxce.c
SecondAttempt/sdk/lib/drivers/sound/mmebuddy/: CMakeLists.txt
SecondAttempt/sdk/lib/drivers/sound/mment4/: CMakeLists.txt
SecondAttempt/sdk/lib/fslib/btrfslib/: CMakeLists.txt
SecondAttempt/sdk/lib/fslib/vfatlib/check/: check.c  common.c  file.c  lfn.c
SecondAttempt/sdk/lib/pseh/: CMakeLists.txt
SecondAttempt/sdk/lib/tdilib/: CMakeLists.txt
SecondAttempt/sdk/tools/: CMakeLists.txt
SecondAttempt/sdk/tools/log2lines/: CMakeLists.txt
SecondAttempt/sdk/tools/rsym/: CMakeLists.txt
SecondAttempt/sdk/tools/wpp/: CMakeLists.txt
boot/freeldr/freeldr/include/: disk.h  freeldr.h
config/: gcc.cmake  msvc.cmake  widl-support.cmake
dll/win32/dbghelp/: CMakeLists.txt
first attempt/: CMakeMacros.cmake
hosttools/include/reactos/: version.cmake
hosttools/lib/cpprt/: CMakeLists.txt
hosttools/lib/crt/: crt.cmake
hosttools/lib/crt/include/internal/mingw-w64/: internal.h
hosttools/lib/crt/wine/: winternl.h
hosttools/lib/drivers/ip/: CMakeLists.txt
hosttools/lib/drivers/lwip/: CMakeLists.txt
hosttools/lib/drivers/sound/legacy/: CMakeLists.txt
hosttools/lib/drivers/sound/mmebuddy/: CMakeLists.txt
hosttools/lib/drivers/sound/mment4/: CMakeLists.txt
hosttools/lib/drivers/sound/mmixer/: CMakeLists.txt
hosttools/lib/drivers/sound/shared/: CMakeLists.txt
hosttools/lib/drivers/sound/soundblaster/: CMakeLists.txt
hosttools/lib/drivers/sound/uartmidi/: CMakeLists.txt
hosttools/lib/fast486/: CMakeLists.txt
hosttools/lib/fslib/vfatlib/check/: common.h  fsck.fat.h  io.c
hosttools/lib/lsalib/: CMakeLists.txt
hosttools/lib/pseh/: CMakeLists.txt
hosttools/lib/smlib/: CMakeLists.txt
hosttools/lib/uuid/: CMakeLists.txt
hosttools/tools/: CMakeLists.txt
hosttools/tools/wpp/: CMakeLists.txt
sdk/include/dxsdk/: CMakeLists.txt
sdk/include/reactos/: version.cmake
sdk/lib/crt/stdio/: file.c
sdk/lib/crt/string/: strtoi64.c
sdk/lib/crt/wine/: except.c  except_i386.c  except_x86_64.c  msvcrt.h
sdk/lib/drivers/rxce/: CMakeLists.txt
sdk/lib/drivers/sound/legacy/: CMakeLists.txt
sdk/lib/drivers/sound/mmixer/: CMakeLists.txt
sdk/lib/drivers/sound/shared/: CMakeLists.txt
sdk/lib/drivers/sound/soundblaster/: CMakeLists.txt
sdk/lib/drivers/sound/uartmidi/: CMakeLists.txt
sdk/lib/fast486/: CMakeLists.txt
sdk/lib/fslib/btrfslib/: btrfslib.c
sdk/lib/fslib/vfatlib/check/: boot.c  fat.c  io.h  msdos_fs.h
sdk/lib/lsalib/: CMakeLists.txt
sdk/lib/smlib/: CMakeLists.txt
sdk/lib/tdilib/: CMakeLists.txt
sdk/lib/udmihelp/: CMakeLists.txt
sdk/tools/hhpcomp/chmc/: chmc.c  list.h
sdk/tools/mkhive/: CMakeLists.txt
sdk/tools/mkisofs/: CMakeLists.txt
sdk/tools/xml2sdb/: CMakeLists.txt
src/: CMakeLists.txt
src/dll/appcompat/apphelp/: CMakeLists.txt
src/dll/win32/dbghelp/: CMakeLists.txt
src/freeldr/bootsect/: CMakeLists.txt  ofwboot.s
src/freeldr/freeldr/: CMakeLists.txt  custom.c
src/freeldr/freeldr/ntldr/: winldr.c
